import logs